--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "homepage": "http://sagarrn23.github.io/vaccine-hai-kya",
+  "scripts": {
+    "dev": "parcel index.html --out-dir dist",
+    "build": "sudo rm -rf ./dist && parcel build index.html --out-dir dist --public-url ./ --no-source-maps --no-cache --no-minify",
+    "deploy": "npm run build && gh-pages -d dist"
+  },
   "dependencies": {
     "lodash": "^4.17.21",
     "regenerator-runtime": "^0.13.7"
+  },
+  "devDependencies": {
+    "cssnano": "^5.0.2",
+    "gh-pages": "^3.1.0",
+    "parcel-bundler": "^1.12.5",
+    "postcss": "^8.2.15"
   }
 }
